fix map pop up bug and clean code
Summary: fix the issue of the toggle being broken on the map. make sure image works on the map.

Test Plan: check things are working both on the map and as the pattern. review code.

Reviewers: seth

Reviewed By: seth

Differential Revision: https://phabricator.ushahidi.com/D766

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     $BOURBON & FRIENDS
 \*------------------------------------*/
-/* @import "css3/selection"; */
+/*@import "css3/selection";*/
 html {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
@@ -2502,7 +2502,7 @@ ul.breadcrumb {
   box-shadow: 0 0px 7px 2px rgba(0, 0, 0, 0.1);
   max-width: 250px;
   position: relative;
-  overflow: visible;
+  overflow: hidden;
   background: #ffffff; }
   @media screen and (min-width: 48em)  {
     .post-popup {
@@ -2513,29 +2513,23 @@ ul.breadcrumb {
       .post-popup p, .post-popup blockquote {
         display: block; } }
   .post-popup .actions-inline {
-    padding: 20px 0 0; }
+    padding: 10px 0 0;
+    display: block; }
     @media screen and (min-width: 48em)  {
       .post-popup .actions-inline {
+        margin-top: 20px;
         border-top: 1px solid #ebebeb;
         padding: 0; } }
-  .post-popup .actions-inline + .toggle-content {
-    padding: 20px 0 0; }
-    @media screen and (min-width: 48em)  {
-      .post-popup .actions-inline + .toggle-content {
-        display: block;
-        border: none; } }
-    .post-popup .actions-inline + .toggle-content li {
-      float: none; }
+    .post-popup .actions-inline + .toggle-content {
+      padding: 10px 0 0; }
       @media screen and (min-width: 48em)  {
-        .post-popup .actions-inline + .toggle-content li {
-          float: left; } }
+        .post-popup .actions-inline + .toggle-content {
+          padding: 20px 0 0;
+          border-top: 1px solid #ebebeb;
+          display: block;
+          border: none; } }
       .post-popup .actions-inline + .toggle-content li a {
         color: #181c21; }
-  .post-popup .actions-inline + .toggle-content .toggle-content-secondary li {
-    float: none; }
-    .post-popup .actions-inline + .toggle-content .toggle-content-secondary li a {
-      color: #2274b4;
-      text-shadow: none; }
   .post-popup.has-image {
     position: relative;
     background: rgba(0, 0, 0, 0.8);
@@ -2549,17 +2543,19 @@ ul.breadcrumb {
       .post-popup.has-image a:hover {
         color: #9cc9ec; }
     .post-popup.has-image img {
+      position: absolute;
       opacity: 0.3;
       top: 0;
       left: 0;
       min-height: 100%;
       min-width: 100%;
-      position: absolute;
+      max-height: 100%;
       z-index: -1; }
     .post-popup.has-image .meta-data, .post-popup.has-image p, .post-popup.has-image blockquote {
       color: #ffffff; }
-    .post-popup.has-image .actions {
-      border-top: 1px solid #181c21; }
+    @media screen and (min-width: 48em)  {
+      .post-popup.has-image .actions-inline {
+        border-top: 1px solid #181c21; } }
 
 .post-list-actions {
   padding: 10px 0;
